# CatBreedDetector

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
cat_breed_detector/: command.py  dataset.py  download_data.py  infer.py  infer_onnx.py  infer_triton.py  infer_trt.py  logging_selector.py  model_getter.py  module.py  test.py  train.py  trainer.py
cat_breed_detector/modules/: cat_breed_dataset.py  data_module.py  infer_data_module.py  module.py  vit_data_module.py
cat_breed_detector/utilities/: data_handler.py  labels_handler.py  logging_selector.py  model_getter.py
configs/: config.yaml
configs/data_loading/: data_loading.yaml
configs/logging/: logging.yaml  logging_parameters.yaml
configs/model/: model.yaml
configs/training/: training.yaml
data/: .gitignore  artifacts.dvc  data.dvc  data_refined.dvc  labels_metainfo.dvc
models/: .gitignore  model.fp32.trt.dvc  model.onnx.dvc  model_val_loss=1.12.ckpt.dvc
scripts/: convert2tensorrt.sh  convert2tensorrt_8.6.sh  download_artifacts.sh  download_dataset.py  download_dataset.sh  download_dataset_refined.sh  download_test_dataset.sh  download_train_dataset.sh  setup_triton_before_launch.sh  shut_down_triton.sh
triton/: docker-compose.yaml
triton/models/cat_breed_detector/: config.pbtxt
